Reduce server bandwidth usage
Added /api/v2/-/query endpoint
Deleted DTOs
Use the same ExtensionVersion Comparator everywhere
Added unit tests
Add performance test for `/api/v2/-/query` endpoint.